# file_upload_samples_generator

./: .gitignore  README.md  pyproject.toml
documentation/: 00-CODEX-ENTRYPOINT.md  01-CONTEXT-AND-REFERENCES.md  02-SAMPLE-CATALOG.md  03-ARCHITECTURE.md  04-IMPLEMENTATION-TASKS.md  05-SECURITY-AND-SAFETY-GUARDRAILS.md  06-TESTING-METHODOLOGY.md  07-CLI-AND-MANIFEST-SPEC.md  08-REPO-RESEARCH-NOTES.md  09-README-DRAFT.md  10-SOURCE-INDEX.md  11-ADDING-NEW-FORMATS.md
src/upload_samples/: __init__.py  cli.py  manifest.py  models.py  registry.py  reporting.py  utils.py
src/upload_samples/generators/: __init__.py  baseline.py  common.py  malformed.py  metadata.py  minimal_headers.py  mismatch.py  pdf_structures.py  polyglots.py  recipes.py  stress.py
src/upload_samples/plugins/: __init__.py  builtins.py
tests/: test_generation.py  test_reporting.py
