[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "upload-samples"
version = "0.1.0"
description = "Generate benign file upload security test samples."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "Pillow>=10",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
upload-samples = "upload_samples.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
